@@ -160,6 +160,9 @@
 			<li><span class="label label-success">Added</span> It is possible to override at the aird level both &#8220;Sirius/Do Refresh on representation opening&#8221; and &#8220;Sirius/Automatic refresh&#8221; preferences. To override the preferences, go to the Properties/Sirius settings section. The preferences are stored in the project scope and associated to the aird file. For more details, refer the 
 				<a href="user/general/Aird_Preferences.html">documentation</a> .
 			</li>
+			<li><span class="label label-success">Added</span> The method 
+				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority.getLockedObjects()</code> has been added the get all the locked objects.
+			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
 		<ul>
