@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2011 THALES GLOBAL SERVICES.
+ * Copyright (c) 2007, 2021 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,7 +12,10 @@
  *******************************************************************************/
 package org.eclipse.sirius.ecore.extender.business.internal.permission;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.resource.ResourceSet;
@@ -30,6 +33,7 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean canCreateIn(final EObject obj) {
         return true;
     }
@@ -37,6 +41,7 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean canEditFeature(final EObject obj, final String featureName) {
         return true;
     }
@@ -44,6 +49,7 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean canEditInstance(final EObject obj) {
         return true;
     }
@@ -51,18 +57,21 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public void dispose(final ResourceSet set) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public void init(final ResourceSet set) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean isChanged(final EObject instance) {
         return false;
     }
@@ -70,6 +79,7 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean isNewInstance(final EObject instance) {
         return false;
     }
@@ -77,24 +87,28 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public void notifyInstanceChange(final EObject instance) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public void notifyInstanceDeletion(final EObject instance) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public void notifyNewInstanceCreation(final EObject instance) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public void addAuthorityListener(final IAuthorityListener listener) {
 
     }
@@ -102,6 +116,7 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public void removeAuthorityListener(final IAuthorityListener listener) {
 
     }
@@ -109,18 +124,21 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
+    @Override
     public void setReportIssues(final boolean report) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public void setListening(final boolean shouldListen) {
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
     public boolean canDeleteInstance(final EObject target) {
         return true;
     }
@@ -128,22 +146,30 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     /**
      * {@inheritDoc}
      */
-	public void notifyLock(Collection<? extends EObject> elements) {
-		
-	}
+    @Override
+    public void notifyLock(Collection<? extends EObject> elements) {
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public void notifyUnlock(Collection<? extends EObject> elements) {
-		
-	}
+    }
 
-	/**
+    /**
      * {@inheritDoc}
      */
+    @Override
+    public void notifyUnlock(Collection<? extends EObject> elements) {
+
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public LockStatus getLockStatus(EObject element) {
         return canEditInstance(element) ? LockStatus.NOT_LOCKED : LockStatus.LOCKED_BY_OTHER;
+    }
+
+    @Override
+    public List<EObject> getLockedObjects() {
+        return Collections.unmodifiableList(new ArrayList<EObject>());
     }
 
 }
